update num devis
